<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayLayout"
    android:background="@color/slategray">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/table_heading"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:mbn_backgroundBottomColor="@color/colorPrimary"
        app:mbn_circleColor="@color/colorPrimaryDark"
        app:mbn_defaultIconColor="#ffffff"
        app:mbn_rippleColor="#2f424242"
        app:mbn_selectedIconColor="#ffffff"
        app:mbn_shadowColor="#1f212121"
        />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/view_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_date"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_styleno"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_style"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_description"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_price"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/th_action"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/pdf_button"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>